Reorg in prep for py::dict params

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory(pybind11)
 enable_testing()
 add_subdirectory(tests)
 
-add_library(model SHARED model/SimpleBoostDecayComponent.cpp)
+add_subdirectory(model)
 
 add_executable(emodRun main.cpp)
 target_link_libraries(emodRun PRIVATE pybind11::embed model)
